[gd_scene load_steps=24 format=2]

[ext_resource path="res://World/world objects/forest1.tres" type="TileSet" id=1]
[ext_resource path="res://Player/KinematicBody2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/world objects/tree5.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/world objects/tree4.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Tree2.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/tree3.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Tree.tscn" type="PackedScene" id=7]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://levels/Script/forest1Chap2.gd" type="Script" id=10]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://intro/pause_menu.tscn" type="PackedScene" id=12]
[ext_resource path="res://intro/picture/pause.png" type="Texture" id=13]
[ext_resource path="res://Battlescenes/bug_no_quiz.tscn" type="PackedScene" id=14]
[ext_resource path="res://NPC/Gandalf.tscn" type="PackedScene" id=15]
[ext_resource path="res://World/room/chapter2_entrance.tscn" type="PackedScene" id=16]
[ext_resource path="res://World/path_arrow.tscn" type="PackedScene" id=17]
[ext_resource path="res://NPC/analexius.tscn" type="PackedScene" id=18]
[ext_resource path="res://UI/heart_spawn.tscn" type="PackedScene" id=19]

[sub_resource type="CircleShape2D" id=2]
radius = 45.0

[sub_resource type="CircleShape2D" id=3]
radius = 50.01

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.5, 16.5 )

[sub_resource type="DynamicFont" id=1]
size = 5
font_data = ExtResource( 9 )

[node name="forest1Chap2" type="Node2D"]
script = ExtResource( 10 )

[node name="floor1" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -1, 20, 0, -65536, 20, 0, -65535, 20, 0, -65534, 20, 0, -65533, 20, 0, -65532, 20, 0, -65531, 20, 0, -65530, 20, 0, -65529, 20, 0, -65528, 20, 0, -65527, 20, 0, -65526, 20, 0, -65525, 20, 0, -65524, 20, 0, -65523, 20, 0, -65522, 20, 0, -65521, 20, 0, -65520, 20, 0, -65519, 20, 0, -65518, 20, 0, -65517, 20, 0, -65516, 20, 0, -65515, 20, 0, -65514, 20, 0, -65513, 20, 0, -65512, 20, 0, -65511, 20, 0, -65510, 20, 0, -65509, 20, 0, -65508, 20, 0, -65507, 20, 0, -65506, 20, 0, -65505, 20, 0, -65504, 20, 0, -65503, 20, 0, -65502, 20, 0, -65501, 20, 0, 65535, 20, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 65537, 13, 4, 0, 14, 4, 0, 15, 4, 0, 16, 4, 0, 17, 4, 0, 18, 4, 0, 19, 4, 0, 20, 4, 0, 21, 4, 0, 22, 4, 0, 23, 4, 0, 24, 4, 0, 25, 4, 0, 26, 4, 0, 27, 4, 0, 28, 4, 0, 35, 20, 0, 131071, 20, 0, 65536, 4, 0, 65537, 4, 65536, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 65537, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 1, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 65559, 4, 0, 65560, 4, 65536, 65561, 4, 0, 65562, 4, 0, 65563, 4, 0, 65564, 4, 0, 65571, 20, 0, 196607, 20, 0, 131072, 4, 0, 131073, 4, 65536, 131074, 4, 0, 131075, 4, 65536, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 65536, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 65536, 131090, 4, 0, 131091, 4, 65536, 131092, 4, 0, 131093, 4, 1, 131094, 4, 0, 131095, 4, 0, 131096, 4, 0, 131097, 4, 0, 131098, 4, 0, 131099, 4, 0, 131100, 4, 0, 131107, 20, 0, 262143, 20, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 65537, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 4, 65536, 196631, 4, 0, 196632, 4, 0, 196633, 4, 0, 196634, 4, 0, 196635, 4, 0, 196636, 4, 0, 196643, 20, 0, 327679, 20, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 65537, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 1, 262158, 4, 0, 262159, 4, 65536, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 4, 0, 262168, 4, 0, 262169, 4, 0, 262170, 4, 0, 262171, 4, 0, 262172, 4, 0, 262179, 20, 0, 393215, 20, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 327696, 4, 0, 327697, 4, 0, 327698, 4, 0, 327699, 4, 1, 327700, 4, 0, 327701, 4, 0, 327702, 4, 0, 327703, 4, 0, 327704, 4, 0, 327705, 4, 0, 327706, 4, 0, 327707, 4, 0, 327708, 4, 0, 327715, 20, 0, 458751, 20, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 393236, 4, 0, 393237, 4, 0, 393238, 4, 0, 393239, 4, 0, 393240, 4, 0, 393241, 4, 0, 393242, 4, 0, 393243, 4, 0, 393244, 4, 0, 393251, 20, 0, 524287, 20, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 65537, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 4, 0, 458771, 4, 0, 458772, 4, 0, 458773, 4, 0, 458774, 4, 0, 458775, 4, 0, 458776, 4, 0, 458777, 4, 0, 458778, 4, 0, 458779, 4, 0, 458780, 4, 0, 458787, 20, 0, 589823, 20, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 65537, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 65536, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 524308, 4, 65536, 524309, 4, 0, 524310, 4, 0, 524311, 4, 0, 524312, 4, 1, 524313, 4, 0, 524314, 4, 0, 524315, 4, 0, 524316, 4, 0, 524323, 20, 0, 655359, 20, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 65536, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 65537, 589839, 4, 0, 589840, 4, 0, 589841, 4, 65537, 589842, 4, 0, 589843, 4, 0, 589844, 4, 0, 589845, 4, 0, 589846, 4, 0, 589847, 4, 65536, 589848, 4, 0, 589849, 4, 0, 589850, 4, 0, 589851, 4, 0, 589852, 4, 0, 589859, 20, 0, 720895, 20, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 65537, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 65536, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 65536, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 4, 65536, 655382, 4, 0, 655383, 4, 0, 655384, 4, 0, 655385, 4, 0, 655386, 4, 0, 655387, 4, 0, 655388, 4, 0, 655395, 20, 0, 786431, 20, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 65536, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 65536, 720906, 4, 65537, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 1, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 4, 0, 720918, 4, 0, 720919, 4, 0, 720920, 4, 0, 720921, 4, 0, 720922, 4, 0, 720923, 4, 0, 720924, 4, 0, 720931, 20, 0, 851967, 20, 0, 786432, 4, 0, 786433, 4, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786440, 4, 65536, 786441, 4, 0, 786442, 4, 0, 786443, 4, 0, 786444, 4, 0, 786445, 4, 0, 786446, 4, 0, 786447, 4, 0, 786448, 4, 0, 786449, 4, 0, 786450, 4, 65536, 786451, 4, 0, 786452, 4, 0, 786453, 4, 0, 786454, 4, 1, 786455, 4, 65536, 786456, 4, 0, 786457, 4, 0, 786458, 4, 0, 786459, 4, 0, 786460, 4, 0, 786467, 20, 0, 917503, 20, 0, 851968, 4, 0, 851969, 4, 0, 851970, 4, 0, 851971, 4, 65537, 851972, 4, 0, 851973, 4, 0, 851974, 4, 0, 851975, 4, 65537, 851976, 4, 65536, 851977, 4, 0, 851978, 4, 0, 851979, 4, 0, 851980, 4, 0, 851981, 4, 0, 851982, 4, 0, 851983, 4, 0, 851984, 4, 1, 851985, 4, 0, 851986, 4, 0, 851987, 4, 0, 851988, 4, 0, 851989, 4, 0, 851990, 4, 0, 851991, 4, 0, 851992, 4, 1, 851993, 4, 0, 851994, 4, 0, 851995, 4, 0, 851996, 4, 0, 852003, 20, 0, 983039, 20, 0, 917504, 4, 0, 917505, 4, 0, 917506, 4, 0, 917507, 4, 0, 917508, 4, 0, 917509, 4, 0, 917510, 4, 0, 917511, 4, 0, 917512, 4, 0, 917513, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 4, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 65536, 917520, 4, 0, 917521, 4, 0, 917522, 4, 0, 917523, 4, 0, 917524, 4, 0, 917525, 4, 0, 917526, 4, 0, 917527, 4, 0, 917528, 4, 0, 917529, 4, 0, 917530, 4, 0, 917531, 4, 0, 917532, 4, 0, 917539, 20, 0, 1048575, 20, 0, 983040, 20, 0, 983041, 20, 0, 983042, 20, 0, 983043, 20, 0, 983044, 20, 0, 983045, 20, 0, 983046, 20, 0, 983047, 20, 0, 983048, 20, 0, 983049, 20, 0, 983050, 20, 0, 983051, 20, 0, 983052, 20, 0, 983053, 20, 0, 983054, 20, 0, 983055, 20, 0, 983056, 20, 0, 983057, 20, 0, 983058, 20, 0, 983059, 20, 0, 983060, 20, 0, 983061, 20, 0, 983062, 20, 0, 983063, 20, 0, 983064, 20, 0, 983065, 20, 0, 983066, 20, 0, 983067, 20, 0, 983068, 20, 0, 983069, 20, 0, 983070, 20, 0, 983071, 20, 0, 983072, 20, 0, 983073, 20, 0, 983074, 20, 0, 983075, 20, 0 )

[node name="floor2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( 25, 2, 65538, 29, 5, 65538, 30, 5, 5, 31, 5, 5, 32, 5, 5, 33, 5, 5, 34, 5, 5, 65561, 2, 65538, 65565, 5, 65538, 65566, 5, 65541, 65567, 5, 5, 65568, 5, 5, 65569, 5, 5, 65570, 5, 5, 131097, 2, 65538, 131101, 5, 65538, 131102, 5, 5, 131103, 5, 5, 131104, 5, 131077, 131105, 5, 5, 131106, 5, 5, 196633, 2, 65538, 196637, 5, 65538, 196638, 5, 5, 196639, 5, 5, 196640, 5, 5, 196641, 5, 5, 196642, 5, 65542, 262169, 2, 65538, 262173, 5, 65538, 262174, 5, 6, 262175, 5, 5, 262176, 5, 5, 262177, 5, 5, 262178, 5, 5, 327705, 2, 65538, 327709, 5, 65538, 327710, 5, 5, 327711, 5, 5, 327712, 5, 5, 327713, 5, 5, 327714, 5, 5, 393216, 2, 131073, 393217, 2, 131073, 393218, 2, 131073, 393219, 2, 131073, 393220, 2, 131073, 393221, 2, 131073, 393222, 2, 131073, 393223, 2, 131073, 393224, 6, 1, 393230, 6, 0, 393231, 2, 131073, 393232, 2, 131073, 393233, 2, 131073, 393234, 2, 131073, 393235, 3, 0, 393236, 3, 0, 393237, 6, 1, 393241, 2, 65538, 393245, 5, 65538, 393246, 5, 5, 393247, 5, 5, 393248, 5, 5, 393249, 5, 6, 393250, 5, 5, 458760, 2, 131072, 458761, 2, 131073, 458762, 2, 131073, 458763, 2, 131073, 458764, 2, 131073, 458765, 2, 131073, 458766, 2, 131074, 458772, 10, 0, 458773, 2, 131072, 458774, 2, 131073, 458775, 2, 131073, 458776, 2, 131073, 458777, 2, 131074, 458781, 5, 65538, 458782, 5, 5, 458783, 5, 5, 458784, 5, 5, 458785, 5, 5, 458786, 5, 5, 524307, 10, 0, 524317, 5, 65538, 524318, 5, 5, 524319, 5, 131077, 524320, 5, 5, 524321, 5, 5, 524322, 5, 5, 589843, 7, 65536, 589844, 7, 65536, 589845, 7, 131072, 589853, 5, 65538, 589854, 5, 5, 589855, 5, 6, 589856, 5, 5, 589857, 5, 65541, 589858, 5, 5, 655360, 10, 0, 655362, 10, 0, 655366, 10, 0, 655370, 10, 0, 655372, 10, 0, 655375, 10, 0, 655377, 10, 0, 655379, 7, 65536, 655380, 7, 131072, 655381, 7, 131072, 655389, 5, 65538, 655390, 5, 5, 655391, 5, 5, 655392, 5, 5, 655393, 5, 5, 655394, 5, 5, 720897, 10, 0, 720900, 10, 0, 720905, 10, 0, 720909, 10, 0, 720912, 10, 0, 720914, 10, 0, 720915, 7, 131072, 720916, 7, 65536, 720917, 7, 65536, 720925, 5, 65538, 720926, 5, 5, 720927, 5, 5, 720928, 5, 5, 720929, 5, 5, 720930, 5, 5, 786461, 5, 65538, 786462, 5, 5, 786463, 5, 5, 786464, 5, 5, 786465, 5, 131077, 786466, 5, 5, 851997, 5, 65538, 851998, 5, 65541, 851999, 5, 5, 852000, 5, 5, 852001, 5, 6, 852002, 5, 5, 917533, 5, 65538, 917534, 5, 5, 917535, 5, 5, 917536, 5, 5, 917537, 5, 5, 917538, 5, 5 )

[node name="floor3_deco" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( 2, 12, 2, 22, 12, 2, 65537, 12, 65537, 65554, 12, 1, 131076, 12, 65538, 131081, 12, 2, 131086, 12, 65537, 131090, 12, 65537, 262144, 12, 2, 262152, 12, 2, 262157, 12, 2, 262163, 12, 1, 262168, 12, 2, 327685, 12, 2, 393229, 12, 1, 393240, 12, 1, 458755, 12, 65538, 458767, 12, 1, 458770, 12, 2, 524313, 12, 65538, 589826, 12, 65537, 589830, 12, 65538, 589833, 12, 65537, 589836, 12, 65537, 589843, 11, 0, 589844, 11, 1, 589845, 11, 2, 655379, 11, 65536, 655381, 11, 65538, 720897, 12, 65538, 720915, 11, 131072, 720916, 11, 131073, 720917, 11, 131074, 851969, 12, 65537, 851986, 12, 65537, 917516, 12, 65538, 917524, 12, 2 )

[node name="gandalfHouse_Outside_pos" type="Position2D" parent="."]
position = Vector2( 33, 169 )

[node name="gandalfHouse_Outside" parent="." instance=ExtResource( 16 )]
position = Vector2( 1, 168 )

[node name="YSort" type="YSort" parent="."]

[node name="Gandalf" parent="YSort" instance=ExtResource( 15 )]
position = Vector2( 328, 166 )

[node name="analexius" parent="YSort" instance=ExtResource( 18 )]
position = Vector2( 208, 139 )

[node name="Camera2D" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 89, 185 )

[node name="BottomRight" parent="YSort/Camera2D/Limits" index="1"]
position = Vector2( 560, 240 )

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 89, 185 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/player"]
remote_path = NodePath("../../Camera2D")

[node name="trees" type="YSort" parent="YSort"]

[node name="Tree" parent="YSort/trees" instance=ExtResource( 7 )]
position = Vector2( 156, -35 )

[node name="Tree2" parent="YSort/trees" instance=ExtResource( 5 )]
position = Vector2( 446, 40 )
scale = Vector2( 0.7, 0.7 )

[node name="Tree3" parent="YSort/trees" instance=ExtResource( 6 )]
position = Vector2( 416, -69 )

[node name="tree4" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 497, -44 )

[node name="tree24" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 359, 219 )

[node name="tree32" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 379, 87 )

[node name="tree36" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 271, 78 )

[node name="tree33" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 262, 20 )

[node name="tree34" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 331, 16 )

[node name="tree14" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 451, 213 )

[node name="tree15" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 416, 186 )

[node name="tree16" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 419, 133 )

[node name="tree17" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 429, 139 )

[node name="tree18" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 444, 153 )

[node name="tree19" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 458, 150 )

[node name="tree20" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 458, 224 )

[node name="tree21" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 425, 105 )

[node name="tree22" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 457, 80 )

[node name="tree23" parent="YSort/trees" instance=ExtResource( 4 )]
position = Vector2( 425, 50 )

[node name="tree5" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 431, 19 )

[node name="tree6" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 453, 19 )

[node name="tree7" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 435, 73 )

[node name="tree8" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 444, 101 )

[node name="tree9" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 453, 126 )

[node name="tree10" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 422, 162 )

[node name="tree11" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 446, 180 )

[node name="tree12" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 423, 216 )

[node name="tree13" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 543, -57 )

[node name="tree25" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 95, 8 )

[node name="tree26" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 45, 75 )

[node name="tree27" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 67, 208 )

[node name="tree29" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 95, 125 )

[node name="tree31" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 188, 206 )

[node name="tree28" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 162, 85 )

[node name="tree37" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 202, 13 )

[node name="tree38" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 383, 146 )

[node name="tree35" parent="YSort/trees" instance=ExtResource( 3 )]
position = Vector2( 385, 23 )

[node name="heart_spawn" parent="YSort/trees" instance=ExtResource( 19 )]
position = Vector2( 48, 29 )
heart_id = "puso1"

[node name="heart_spawn2" parent="YSort/trees" instance=ExtResource( 19 )]
position = Vector2( 31, 220 )
heart_id = "puso2"

[node name="heart_spawn3" parent="YSort/trees" instance=ExtResource( 19 )]
position = Vector2( 381, 210 )
heart_id = "puso3"

[node name="bugs" type="YSort" parent="YSort"]

[node name="bug1" parent="YSort/bugs" instance=ExtResource( 14 )]
position = Vector2( 243, 42 )
bug_id = "bug1"

[node name="quiz" type="Area2D" parent="YSort/bugs/bug1"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/bugs/bug1/quiz"]
position = Vector2( -2, -8 )
shape = SubResource( 2 )

[node name="bug2" parent="YSort/bugs" instance=ExtResource( 14 )]
position = Vector2( 326, 139 )
bug_id = "bug2"

[node name="quiz" type="Area2D" parent="YSort/bugs/bug2"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/bugs/bug2/quiz"]
position = Vector2( -2, -8 )
shape = SubResource( 2 )

[node name="bug5" parent="YSort/bugs" instance=ExtResource( 14 )]
position = Vector2( 204, 186 )
bug_id = "kalaban1"

[node name="quiz" type="Area2D" parent="YSort/bugs/bug5"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/bugs/bug5/quiz"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )

[node name="bug6" parent="YSort/bugs" instance=ExtResource( 14 )]
position = Vector2( 207, 76 )
bug_id = "kalaban2"

[node name="quiz" type="Area2D" parent="YSort/bugs/bug6"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/bugs/bug6/quiz"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )

[node name="path" type="YSort" parent="YSort"]

[node name="path_arrow" parent="YSort/path" instance=ExtResource( 17 )]
tile_data = PoolIntArray( 10616833, 0, 0 )

[node name="Area2D" type="Area2D" parent="YSort"]
position = Vector2( 3, 168 )
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Area2D"]
shape = SubResource( 4 )

[node name="TopUi" type="CanvasLayer" parent="."]

[node name="pause_game" type="TextureButton" parent="TopUi"]
margin_left = 292.0
margin_top = 3.0
margin_right = 312.0
margin_bottom = 23.0
texture_normal = ExtResource( 13 )

[node name="HealthUI" parent="TopUi" instance=ExtResource( 11 )]
margin_left = 3.0
margin_top = 3.0
margin_right = 63.0
margin_bottom = 14.0

[node name="quest" type="TextureButton" parent="TopUi"]
margin_right = 40.0
margin_bottom = 40.0

[node name="pause_menu" parent="TopUi" instance=ExtResource( 12 )]

[node name="Label2" type="Label" parent="TopUi"]
margin_left = 132.0
margin_top = 8.0
margin_right = 205.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[connection signal="body_shape_entered" from="YSort/bugs/bug1/quiz" to="." method="_on_quiz_body_shape_entered"]
[connection signal="body_shape_entered" from="YSort/bugs/bug2/quiz" to="." method="_on_quizbug2_body_shape_entered"]
[connection signal="body_shape_entered" from="YSort/bugs/bug5/quiz" to="." method="_on_quiz_body_shape_entered_chapter3bug5"]
[connection signal="body_shape_entered" from="YSort/bugs/bug6/quiz" to="." method="_on_quiz_body_shape_entered_chapter3bug6"]
[connection signal="body_shape_entered" from="YSort/Area2D" to="." method="lock_path_dialogue"]
[connection signal="pressed" from="TopUi/pause_game" to="." method="_on_pause_game_pressed"]

[editable path="YSort/Camera2D"]
